redirecciones listas report profile

--- a/report-medico.html
+++ b/report-medico.html
@@ -47,42 +47,43 @@
 
     <div class="d-flex" id="wrapper" class="toggled">
 
-        <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
-            <div class="list-group list-group-flush d-inline-flex align-items-center">
-
-                <!-- Consultar fecha de vacunacion -->
-                <a href="report-medico.html" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-question"></i></div>
-                        <div class="col-10">Consultar Turno de Vacunación</div>
-                    </div>
-                </a>
-                <!-- Cambio de turno
-            <a href="#" class="list-group-item list-group-item-action bg-light">
+     <!-- Sidebar -->
+     <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
+        <div class="list-group list-group-flush d-inline-flex align-items-center">
+            <!-- Información Personal y Turnos-->
+            <a href="profile-medico.html" class="list-group-item list-group-item-action bg-light ">
                 <div class="row">
-                <div class="col-2"><i class="fas fa-file-signature"></i></div>
-                <div class="col-10">Solicitar cambio de turno</div>
+                    <div class="col-2"><i class="fas fa-file-signature"></i></div>
+                    <div class="col-10">Información Personal y Turnos</div>
                 </div>
-            </a>-->
+            </a>
+            <!-- Consultar fecha de vacunacion -->
+            <a href="#"
+                class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
+                <div class="row">
+                    <div class="col-2"><i class="fas fa-question"></i></div>
+                    <div class="col-10">Consultar Turno de Vacunación</div>
+                </div>
+            </a>
 
-                <!-- Registrar Personal de vacunación -->
-                <a href="#" class="list-group-item list-group-item-action bg-light ">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-download"></i></div>
-                        <div class="col-10">Descargar</div>
-                    </div>
-                </a>
-                <!-- Salir -->
-                <a href="home.html" class="list-group-item list-group-item-action bg-light">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
-                        <div class="col-10">Salir</div>
-                    </div>
-                </a>
-            </div>
+
+            <!-- Registrar Personal de vacunación -->
+            <a href="#" class="list-group-item list-group-item-action bg-light ">
+                <div class="row">
+                    <div class="col-2"><i class="fas fa-download"></i></div>
+                    <div class="col-10">Descargar</div>
+                </div>
+            </a>
+            <!-- Salir -->
+            <a href="home.html" class="list-group-item list-group-item-action bg-light">
+                <div class="row">
+                    <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
+                    <div class="col-10">Salir</div>
+                </div>
+            </a>
         </div>
+    </div>
 
         <!-- /#sidebar-wrapper -->
 
