--- a/asign-medico.html
+++ b/asign-medico.html
@@ -87,14 +87,14 @@
                     </div>
                 </a>
                 <!-- Asignar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleAsignar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled font-weight-bolder" id="navbarToggleAsignar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal médico</div>
                     </div>
                 </a>
                 <!-- Asignar personal militar -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleAsignar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleAsignar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal militar</div>
