--- a/asign-militar.html
+++ b/asign-militar.html
@@ -62,27 +62,21 @@
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-<<<<<<< Updated upstream
                 <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
-=======
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleRegistrar">
->>>>>>> Stashed changes
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal médico</div>
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-<<<<<<< Updated upstream
                 <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
-=======
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleRegistrar">
->>>>>>> Stashed changes
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal militar</div>
                     </div>
                 </a>
+
+
                 <!-- Asignar Personal de vacunacion-->
                 <a href="#" class="list-group-item list-group-item-action bg-light navbar-toogle" data-toggle="collapse"
                     data-target="#navbarToggleAsignar" aria-controls="navbarToggleAsignar" aria-expanded="false"
@@ -100,7 +94,7 @@
                     </div>
                 </a>
                 <!-- Asignar personal militar -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled font-weight-bolder" id="navbarToggleAsignar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled disabled font-weight-bolder" id="navbarToggleAsignar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal militar</div>
