--- a/form-militar.html
+++ b/form-militar.html
@@ -65,18 +65,14 @@
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleRegistrar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal médico</div>
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-<<<<<<< Updated upstream
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
-=======
-                <a href="#" class="list-group-item list-group-item-action bg-secondary collapse disabled font-weight-bolder" id="navbarToggleRegistrar">
->>>>>>> Stashed changes
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled font-weight-bolder" id="navbarToggleRegistrar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal militar</div>
@@ -94,14 +90,14 @@
                     </div>
                 </a>
                 <!-- Asignar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleAsignar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleAsignar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal médico</div>
                     </div>
                 </a>
                 <!-- Asignar personal militar -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleAsignar">
+                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled " id="navbarToggleAsignar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal militar</div>
@@ -117,7 +113,6 @@
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
-
  
         <!-- Page Content -->
         <div id="page-content-wrapper">
