--- a/login-adulto.html
+++ b/login-adulto.html
@@ -84,7 +84,7 @@
 
                 <div class="form-row mt-4">
                     <div class="col">
-                        <input type="text" id="fecha-emision" class="form-control form-control-lg" auto-slash="/"
+                        <input type="date" id="fecha-emision" class="form-control form-control-lg" auto-slash="/"
                             placeholder="Fecha de Emisión (3)" aria-describedby="inputGroupPrepend3" required
                             pattern="(0?[1-9]|[12][0-9]|3[01])/(0?[1-9]|1[012])/\d{4}">
                         <small id="dniHelp" class="form-text text-muted ">La fecha de emisión debe seguir el siguiente
