--- a/form-medico.html
+++ b/form-medico.html
@@ -156,7 +156,7 @@
                                    <p>DNI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Numero DNI"
+                                <input type="text" class="form-control form-control-lg" placeholder="Número DNI"
                                 aria-describedby="inputGroupPrepend1"required>
                             </div>
                         </div>
