--- a/profile-medico.html
+++ b/profile-medico.html
@@ -19,12 +19,10 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex" height="75px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex" height="75px" src="Img/perfil-vacio.webp" alt="">
                 <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
 
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
                 <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -157,7 +155,7 @@
 
 
                         <div class="row">
-                            <div class="col-6 text-center">
+                            <div class="col col-lg-6 text-center">
                                 <!-- cabecera 2-->
                                 <div class="row mt-4 border-bottom">
                                     <h3 class="font-weight-bold d-none d-sm-flex "> Turnos Asignados </h3>
@@ -165,9 +163,7 @@
                                 </div>
                                 <!-- Turnos Asignados-->
                                 <section style="overflow-y: scroll; height:369px;">
-                                    <button class="btn btn-light card d-inline-flex m-2 " style="width: 16rem;"
-                                        data-toggle="collapse" href="#fecha" role="button" aria-expanded="false"
-                                        aria-controls="fecha">
+                                    <button class="btn btn-light card d-inline-flex m-2 " style="width: 16rem;" data-toggle="collapse" href="#fecha" role="button" aria-expanded="false" aria-controls="fecha">
                                         <div class="card-body">
                                             <h3>Lunes 12 de Enero</h3>
                                         </div>
@@ -202,7 +198,7 @@
                                 </section>
                             </div>
 
-                            <div class="col-6">
+                            <div class="col col-lg-6">
                                 <!-- cabecera 3-->
                                 <div class="row mt-4 border-bottom">
                                     <h3 class="font-weight-bold d-none d-sm-flex "> Turno Detallado </h3>
@@ -318,7 +314,7 @@
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
-        $("#menu-toggle").click(function (e) {
+        $("#menu-toggle").click(function(e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
