--- a/form-medico.html
+++ b/form-medico.html
@@ -19,21 +19,18 @@
 
 <body class="d-flex flex-column">
     <!-- Encabezado 1 -->
-    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
+    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary ">
         <div class="container">
-            <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px"
-                    src="Img/perfil-vacio.webp" alt="">
-                <h3 class="d-none d-lg-inline-flex ml-3">Administrador</h3>
-
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
-                    src="Img/perfil-vacio.webp" alt="">
-                <h4 class="d-lg-none d-inline-flex ml-3">Administrador</h4>
-            </a>
-            <div class="d-none d-lg-flex col-lg-4 my-auto">
-                <a href="https://www.gob.pe/minsa/">
-                    <img class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="">
-                </a>
+            <div class="row">
+                <div class="col-lg-8 text-left ">
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
+                </div>
+                <div class="d-none d-lg-flex col-lg-4 my-auto">
+                    <a href="https://www.gob.pe/minsa/">
+                        <img class="img-fluid rounded border" src="Img/MINSA-LOGO.jpg" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -56,51 +53,18 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
 
                 <!-- Registrar Personal de vacunación -->
-                <a href="#" class="list-group-item list-group-item-action bg-light navbar-toogle" data-toggle="collapse"
-                    data-target="#navbarToggleRegistrar" aria-controls="navbarToggleRegistrar" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <a href="registro_personal.html" class="list-group-item list-group-item-action bg-light navbar-toogle">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal de vacunación</div>
                     </div>
                 </a>
-                <!-- Registrar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled font-weight-bolder" id="navbarToggleRegistrar">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-user-plus"></i></div>
-                        <div class="col-10">Registrar personal médico</div>
-                    </div>
-                </a>
-                <!-- Registrar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-user-plus"></i></div>
-                        <div class="col-10">Registrar personal militar</div>
-                    </div>
-                </a>
-
 
                 <!-- Asignar Personal de vacunacion-->
-                <a href="#" class="list-group-item list-group-item-action bg-light navbar-toogle" data-toggle="collapse"
-                    data-target="#navbarToggleAsignar" aria-controls="navbarToggleAsignar" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <a href="asign-personal.html" class="list-group-item list-group-item-action bg-light ">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-edit"></i></div>
                         <div class="col-10">Asignar personal de vacunación</div>
-                    </div>
-                </a>
-                <!-- Asignar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse " id="navbarToggleAsignar">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-edit"></i></div>
-                        <div class="col-10">Asignar personal médico</div>
-                    </div>
-                </a>
-                <!-- Asignar personal militar -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse disabled " id="navbarToggleAsignar">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-edit"></i></div>
-                        <div class="col-10">Asignar personal militar</div>
                     </div>
                 </a>
                 <!-- Salir -->
@@ -115,7 +79,7 @@
         <!-- /#sidebar-wrapper -->
 
 
- 
+
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container mb-5">
@@ -129,97 +93,91 @@
                     <!-- Fila 1 -->
                     <div class="row mt-5">
 
-                            <div class="col-5 mr-2">
-                                <div class="row">
-                                       <p>Nombres:</p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Nombres"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
+                        <div class="col-5 mr-2">
+                            <div class="row">
+                                <p>Nombres:</p>
                             </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Nombres" aria-describedby="inputGroupPrepend1" required>
+                            </div>
+                        </div>
 
-                            <div class="col-5">
-                                <div class="row">
-                                       <p>Apellidos: </p>
-                                </div>
-                                <div class="row">
-                                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos"
-                                    aria-describedby="inputGroupPrepend1"required>
-                                </div>
+                        <div class="col-5">
+                            <div class="row">
+                                <p>Apellidos: </p>
                             </div>
+                            <div class="row">
+                                <input type="text" class="form-control form-control-lg" placeholder="Apellidos" aria-describedby="inputGroupPrepend1" required>
+                            </div>
+                        </div>
                     </div>
                     <!-- Fila 2 -->
                     <div class="row mt-5">
                         <div class="col-4 mr-2">
                             <div class="row">
-                                   <p>DNI: </p>
+                                <p>DNI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número DNI"
-                                aria-describedby="inputGroupPrepend1"required>
+                                <input type="text" class="form-control form-control-lg" placeholder="Número DNI" aria-describedby="inputGroupPrepend1" required>
                             </div>
                         </div>
                         <div class="col-2 mr-2">
                             <div class="row">
-                                   <p>CUI: </p>
+                                <p>CUI: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="CUI"
-                                aria-describedby="inputGroupPrepend1"required>
+                                <input type="text" class="form-control form-control-lg" placeholder="CUI" aria-describedby="inputGroupPrepend1" required>
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="row">
-                                   <p>Fecha de emisión: </p>
+                                <p>Fecha de emisión: </p>
                             </div>
                             <div class="row">
-                                <input type="date" class="form-control form-control-lg" placeholder="dd/mm/aaaa"
-                                aria-describedby="inputGroupPrepend1"required>
+                                <input type="date" class="form-control form-control-lg" placeholder="dd/mm/aaaa" aria-describedby="inputGroupPrepend1" required>
                             </div>
-                        </div>                    
+                        </div>
                     </div>
 
                     <!-- Fila 4 -->
                     <div class="row mt-5 mb-5">
                         <div class="col-5 mr-2">
                             <div class="row">
-                                   <p>Número de teléfono o celular: </p>
+                                <p>Número de teléfono o celular: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número de teléfono o celular"
-                                aria-describedby="inputGroupPrepend1"required>
+                                <input type="text" class="form-control form-control-lg" placeholder="Número de teléfono o celular" aria-describedby="inputGroupPrepend1" required>
                             </div>
                         </div>
                         <div class="col-5 mr-2">
                             <div class="row">
-                                   <p>Código de colegiatura: </p>
+                                <p>Código de colegiatura: </p>
                             </div>
                             <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Código de colegiatura"
-                                aria-describedby="inputGroupPrepend1"required>
+                                <input type="text" class="form-control form-control-lg" placeholder="Código de colegiatura" aria-describedby="inputGroupPrepend1" required>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
             </div>
-               <!-- botones -->
-        <div class="form-row mb-4 mt-5 text-center justify-content-center rounded">
-            <div class="form-group">
-                <a href="#" class="btn btn-lg btn-primary">
-                    <i class="fas fa-edit"></i> Registrar</i> </a>
+            <!-- botones -->
+            <div class="form-row mb-4 mt-5 text-center justify-content-center rounded">
+                <div class="form-group">
+                    <a href="#" class="btn btn-lg btn-primary">
+                        <i class="fas fa-edit"></i> Registrar</i>
+                    </a>
 
-                <a href="profile-militar.html" class="btn btn-lg btn-secondary">
-                    <i class="fas fa-window-close"></i>Cancelar</a>
-               
+                    <a href="profile-militar.html" class="btn btn-lg btn-secondary">
+                        <i class="fas fa-window-close"></i>Cancelar</a>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- /#page-content-wrapper -->
-<footer class="mt-auto bg-dark text-light text-center">
+    <!-- /#page-content-wrapper -->
+    <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
-</footer>
+    </footer>
 
 
 
