--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
             </div>
         </a>
         <!--Boton Administrador-->
-        <a href="login-militar.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
+        <a href="login-administrador.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -145,7 +145,7 @@
             </div>
         </a>
 
-        <a href="login-militar.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+        <a href="login-administrador.html" style="text-decoration:none " class="row boton-inicial btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button href="# " type="button " class="btn btn-secondary boton1 ">
