--- a/login-administrador.html
+++ b/login-administrador.html
@@ -24,10 +24,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-left ">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br
-                            class="d-none d-lg-inline "> COVID 19</h1>
-                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline ">
-                        COVID 19</h2>
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto">
                     <a href="https://www.gob.pe/minsa/">
@@ -61,8 +59,7 @@
 
                 <div class="form-row">
                     <div class="col-12">
-                        <input type="text" id="dni" pattern="[0-9][A-z][a-Z]" class="form-control form-control-lg"
-                            placeholder="Usuario" aria-describedby="inputGroupPrepend1" required>
+                        <input type="text" id="dni" pattern="[0-9][A-z][a-Z]" class="form-control form-control-lg" placeholder="Usuario" aria-describedby="inputGroupPrepend1" required>
                         <small id="dniHelp" class="form-text text-muted">El número de Usuario debe contener
                             caracteres y números</small>
                         <div class="valid-feedback">¡Correcto!</div>
@@ -76,12 +73,11 @@
 
                 <div class="form-row">
                     <div class="col">
-                            <input type="password" id=""  class="form-control form-control-lg"
-                                placeholder="Contraseña" aria-describedby="inputGroupPrepend4" required>
-                            <small id="dniHelp" class="form-text text-muted">Ingrese una contraseña valida
+                        <input type="password" id="" class="form-control form-control-lg" placeholder="Contraseña" aria-describedby="inputGroupPrepend4" required>
+                        <small id="dniHelp" class="form-text text-muted">Ingrese una contraseña valida
                                  </small>
-                            <div class="valid-feedback">¡Correcto!</div>
-                            <div class="invalid-feedback">Proporcione una contraseña válida</div>       
+                        <div class="valid-feedback">¡Correcto!</div>
+                        <div class="invalid-feedback">Proporcione una contraseña válida</div>
                     </div>
                 </div>
 
@@ -91,20 +87,17 @@
                             Ingresar</button>
                     </div>
                     <div class="col">
-                        <a href="Seleccion_Personal.html" class="btn btn-lg btn-secondary ml-auto">
+                        <a href="home.html" class="btn btn-lg btn-secondary ml-auto">
                             <i class="fas fa-window-close"></i> Cancelar</a>
                     </div>
-                </div>                
+                </div>
             </form>
 
 
             <!-- Sección de MINSA y Anuncio-->
             <div class="col-lg-6 mt-3 ml-auto my-4">
                 <div class="mt-4 embed-responsive embed-responsive-16by9 mb-2">
-                    <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -123,15 +116,14 @@
 
     <!--Validacion-->
     <script>
-       
-        (function () {
+        (function() {
             'use strict';
-            window.addEventListener('load', function () {
-               
+            window.addEventListener('load', function() {
+
                 var forms = document.getElementsByClassName('needs-validation');
                 // Prevenir submit
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                    form.addEventListener('submit', function(event) {
                         if (form.checkValidity() === false) {
                             event.preventDefault();
                             event.stopPropagation();
@@ -143,18 +135,17 @@
 
                 var inputs = document.getElementsByClassName('form-control')
 
-                 // Validación en tiempo real
-                var validation = Array.prototype.filter.call(inputs, function (input) {
+                // Validación en tiempo real
+                var validation = Array.prototype.filter.call(inputs, function(input) {
 
-                    input.addEventListener('blur', function (event) {
+                    input.addEventListener('blur', function(event) {
                         // reset
                         input.classList.remove('is-invalid')
                         input.classList.remove('is-valid')
 
                         if (input.checkValidity() === false) {
                             input.classList.add('is-invalid')
-                        }
-                        else {
+                        } else {
                             input.classList.add('is-valid')
                         }
                     }, false);
