--- a/registro_personal.html
+++ b/registro_personal.html
@@ -40,8 +40,8 @@
     <section class="container mt-1 mb-3">
         <!--Enunciado Superior-->
         <div class="row mx-5 d-flex justify-content-center text-center ">
-            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿Qué personal registrrá?</h1>
-            <h2 class="d-flex d-lg-none font-weight-bold text-primary mt-5 mx-5 mb-4 ">¿Qué personal registrrá?</h2>
+            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿Qué personal registrará?</h1>
+            <h2 class="d-flex d-lg-none font-weight-bold text-primary mt-5 mx-5 mb-4 ">¿Qué personal registrará?</h2>
         </div>
 
         <!--Boton Personal Salud -->
@@ -59,7 +59,7 @@
             </div>
         </a>
 
-        <a href="form-adulto.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
+        <a href="form-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
