--- a/report-adulto.html
+++ b/report-adulto.html
@@ -15,6 +15,11 @@
 
     <!--ARCHIVO CSS PERSONALIZADOS-->
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
+
+    <!---->
+    <script src="js/html2pdf.bundle.min.js"></script>
+    <script src="js/script.js"></script>
+
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -53,12 +58,24 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
 
                 <!-- Consultar fecha de vacunacion -->
-                <a href="report-adulto.html" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
+                <a href="report-adulto.html" 
+                    class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-question"></i></div>
                         <div class="col-10">Consultar Turno de Vacunación</div>
                     </div>
                 </a>
+
+                <!-- Consultar fecha de vacunacion -->
+                <a href="#" id="btnCrearPdf"
+                    class="list-group-item list-group-item-action bg-light  ">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-download"></i></div>
+                        <div class="col-10">  Descargar</div>
+                    </div>
+                </a>
+
+              
 
                 <!-- Salir -->
                 <a href="home.html" class="list-group-item list-group-item-action bg-light">
@@ -75,7 +92,7 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
 
-            <div class="container ">
+            <div class="container " id="reporte">
                 <div class="row m-2">
 
 
@@ -256,6 +273,7 @@
     <!-- iconos-->
     <script src="https://kit.fontawesome.com/160f79963e.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js "></script>
+    <script src="js/jquery.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
@@ -263,7 +281,27 @@
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
+
     </script>
+    <!--
+         $("#brnCrearPdf").click(function (e) {
+             var doc = new jsPDF();
+             var elementHTML = $('reporte').html();
+             doc.fromHTML(elementHTML, 15, 15, {
+                 width: 170
+ 
+             })
+             doc.save('reporte-vacunacion.pdf');
+         });
+
+  
+    -->
+
+
+
+
+
+
 </body>
 
 </html>
