--- a/welcome-admin.html
+++ b/welcome-admin.html
@@ -81,8 +81,10 @@
         <div id="page-content-wrapper">
             <div class="container ">
                 <div class="row">
-                    <div class="col">
+                    <div class="col text-center">
                         <h1 class="display-4">Bienvenido Administrador</h1>
+                        <h2>Aquí podrá registrar personal de trabajo y asignarles turnos.</h2>
+                        <img class="img-fluid" src="Img/vacunate.png" alt="">
                     </div>
                 </div>
             </div>
