--- a/report-adulto.html
+++ b/report-adulto.html
@@ -26,12 +26,10 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
                 <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
 
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
                 <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -58,8 +56,7 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
 
                 <!-- Consultar fecha de vacunacion -->
-                <a href="report-adulto.html" 
-                    class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
+                <a href="report-adulto.html" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-question"></i></div>
                         <div class="col-10">Consultar Turno de Vacunación</div>
@@ -67,15 +64,14 @@
                 </a>
 
                 <!-- Consultar fecha de vacunacion -->
-                <a href="#" id="btnCrearPdf"
-                    class="list-group-item list-group-item-action bg-light  ">
+                <a href="#" id="btnCrearPdf" class="list-group-item list-group-item-action bg-light  ">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-download"></i></div>
-                        <div class="col-10">  Descargar</div>
+                        <div class="col-10"> Descargar</div>
                     </div>
                 </a>
 
-              
+
 
                 <!-- Salir -->
                 <a href="home.html" class="list-group-item list-group-item-action bg-light">
@@ -100,10 +96,8 @@
 
                         <!-- cabecera 1 -->
                         <div class="row border-bottom">
-                            <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID
-                                - 19 </h3>
-                            <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID
-                                - 19 </h4>
+                            <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID - 19 </h3>
+                            <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID - 19 </h4>
                         </div>
                         <!-- Reporte -->
                         <div class="accordion-item__container mt-4 ">
@@ -267,7 +261,7 @@
 
 
     <footer class="mt-auto bg-dark text-light text-center">
-        <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
+        <p> IHC-Grupo 3 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
 
     <!-- iconos-->
@@ -277,11 +271,10 @@
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
-        $("#menu-toggle").click(function (e) {
+        $("#menu-toggle").click(function(e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
-
     </script>
     <!--
          $("#brnCrearPdf").click(function (e) {
