--- a/report-militar.html
+++ b/report-militar.html
@@ -21,12 +21,10 @@
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-none figure-img rounded-circle border-dark shadow d-lg-inline-flex " height="75px" src="Img/perfil-vacio.webp" alt="">
                 <h3 class="d-none d-lg-inline-flex ml-3">Nombre Apellido</h3>
 
-                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px"
-                    src="Img/perfil-vacio.webp" alt="">
+                <img class="d-lg-none figure-img rounded-circle border-dark shadow d-inline-flex" height="50px" src="Img/perfil-vacio.webp" alt="">
                 <h4 class="d-lg-none d-inline-flex ml-3">Nombre Apellido</h4>
             </a>
             <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -48,35 +46,34 @@
     <div class="d-flex" id="wrapper" class="toggled">
 
         <!-- Sidebar -->
-     <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
-        <div class="list-group list-group-flush d-inline-flex align-items-center">
-            <!-- Información Personal y Turnos-->
-            <a href="profile-militar.html" class="list-group-item list-group-item-action bg-light ">
-                <div class="row">
-                    <div class="col-2"><i class="fas fa-file-signature"></i></div>
-                    <div class="col-10">Información Personal y Turnos</div>
-                </div>
-            </a>
-            <!-- Consultar fecha de vacunacion -->
-            <a href="#"
-                class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
-                <div class="row">
-                    <div class="col-2"><i class="fas fa-question"></i></div>
-                    <div class="col-10">Consultar Turno de Vacunación</div>
-                </div>
-            </a>
-            <!-- Salir -->
-            <a href="home.html" class="list-group-item list-group-item-action bg-light">
-                <div class="row">
-                    <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
-                    <div class="col-10">Salir</div>
-                </div>
-            </a>
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
+            <div class="list-group list-group-flush d-inline-flex align-items-center">
+                <!-- Información Personal y Turnos-->
+                <a href="profile-militar.html" class="list-group-item list-group-item-action bg-light ">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-file-signature"></i></div>
+                        <div class="col-10">Información Personal y Turnos</div>
+                    </div>
+                </a>
+                <!-- Consultar fecha de vacunacion -->
+                <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-question"></i></div>
+                        <div class="col-10">Consultar Turno de Vacunación</div>
+                    </div>
+                </a>
+                <!-- Salir -->
+                <a href="home.html" class="list-group-item list-group-item-action bg-light">
+                    <div class="row">
+                        <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
+                        <div class="col-10">Salir</div>
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
 
-<!-- /#sidebar-wrapper -->
+        <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
@@ -89,10 +86,8 @@
 
                         <!-- cabecera 1 -->
                         <div class="row border-bottom">
-                            <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID
-                                - 19 </h3>
-                            <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID
-                                - 19 </h4>
+                            <h3 class="font-weight-bold d-none d-sm-flex "> Reporte de Turno de Vacunación contra COVID - 19 </h3>
+                            <h4 class="font-weight-bold d-flex d-sm-none "> Reporte de Turno de Vacunación contra COVID - 19 </h4>
                         </div>
                         <!-- Reporte -->
                         <div class="accordion-item__container mt-4 ">
@@ -256,7 +251,7 @@
 
 
     <footer class="mt-auto bg-dark text-light text-center">
-        <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
+        <p> IHC-Grupo 3 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
 
     <!-- iconos-->
@@ -265,7 +260,7 @@
     <script src="js/bootstrap.min.js "></script>
     <script src="js/popper.min.js "></script>
     <script>
-        $("#menu-toggle").click(function (e) {
+        $("#menu-toggle").click(function(e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
