--- a/form-adulto.html
+++ b/form-adulto.html
@@ -23,10 +23,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-left ">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br
-                            class="d-none d-lg-inline "> COVID 19</h1>
-                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline ">
-                        COVID 19</h2>
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto">
                     <a href="https://www.gob.pe/minsa/">
@@ -81,8 +79,7 @@
                                                     </div>
 
                                                     <div class="form-check-label mt-2">
-                                                        <div class="form-check-label"><label
-                                                                class="form-check-label"><input id="visual"
+                                                        <div class="form-check-label"><label class="form-check-label"><input id="visual"
                                                                     class="form-check-input" type="checkbox"
                                                                     value="">Visual</label>
                                                         </div>
@@ -90,9 +87,7 @@
 
                                                     <div class="form-check-label mt-2 mr-2">
                                                         <div class="form-check-input d-inline-flex">
-                                                            <p>Otros: <input class="form-control form-control-sm "
-                                                                    type="text" placeholder="Especifique"
-                                                                    id="otra-discapacidad"></p>
+                                                            <p>Otros: <input class="form-control form-control-sm " type="text" placeholder="Especifique" id="otra-discapacidad"></p>
 
                                                         </div>
                                                     </div>
@@ -129,17 +124,18 @@
                 <div class="form-row mt-3 text-center justify-content-center rounded">
                     <div class="form-group">
                         <a href="ReporteAM.html" class="btn btn-lg btn-primary">
-                            <i class="fas fa-edit"></i> Registrar</i> </a>
+                            <i class="fas fa-edit"></i> Registrar</i>
+                        </a>
 
                         <a href="login_Adulto_Mayor.html" class="btn btn-lg btn-secondary">
                             <i class="fas fa-window-close"></i> Cancelar </a>
 
                     </div>
                 </div>
-            </form><!-- Sección de MINSA y Anuncio-->
+            </form>
+            <!-- Sección de MINSA y Anuncio-->
             <div class="col-lg-4">
-                <div class="row justify-content-center align-items-center"><img class="img-fluid"
-                        src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
+                <div class="row justify-content-center align-items-center"><img class="img-fluid" src="Img/ANUNCIO-AM-RED.png" alt="" style="height: 60vh; width:auto;"></div>
             </div>
 
         </div>
