--- a/question-adulto.html
+++ b/question-adulto.html
@@ -24,10 +24,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-left ">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br
-                            class="d-none d-lg-inline "> COVID 19</h1>
-                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline ">
-                        COVID 19</h2>
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                    <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto">
                     <a href="https://www.gob.pe/minsa/">
@@ -52,16 +50,13 @@
     <section class="container mt-1 mb-3">
         <!--Enunciado Superior-->
         <div class="row mx-5 d-flex justify-content-center text-center ">
-            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿Desea recibir la vacuna
-                contra el COVID 19?</h1>
-            <h2 class="d-flex d-lg-none font-weight-bold text-primary mt-5 mx-5 mb-4 ">¿Desea recibir la vacuna contra
-                el COVID 19?</h2>
+            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿Desea recibir la vacuna contra el COVID 19?</h1>
+            <h2 class="d-flex d-lg-none font-weight-bold text-primary mt-5 mx-5 mb-4 ">¿Desea recibir la vacuna contra el COVID 19?</h2>
         </div>
 
         <!--Boton Si-->
         <div class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
-            <a href="RegistroAM.html " style="text-decoration:none "
-                class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
+            <a href="RegistroAM.html " style="text-decoration:none " class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
                         <img class="img-fluid " src="Img/vacuna.png" alt=" ">
@@ -75,10 +70,8 @@
             </a>
         </div>
 
-        <a href="RegistroAM.html" style="text-decoration:none"
-            class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center align-items-center d-flex d-sm-none ">
-            <div class="col-11 btn-group btn-group-sm justify-content-center " role="group "
-                aria-label="Basic example ">
+        <a href="RegistroAM.html" style="text-decoration:none" class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center align-items-center d-flex d-sm-none ">
+            <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 " href="login_Adulto_Mayor.html ">
                         <img class="img-fluid " src="Img/vacuna.png" alt=" ">
@@ -91,8 +84,7 @@
         </a>
 
         <!--Boton No -->
-        <a href="seleccion_Usuario.html" style="text-decoration:none "
-            class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
+        <a href="seleccion_Usuario.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -106,10 +98,8 @@
             </div>
         </a>
 
-        <a href="seleccion_Usuario.html " style="text-decoration:none "
-            class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
-            <div class="col-11 btn-group btn-group-sm justify-content-center " role="group "
-                aria-label="Basic example ">
+        <a href="seleccion_Usuario.html " style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-2 justify-content-center d-flex d-sm-none ">
+            <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
                         <img class="img-fluid " src="Img/vacuna-no.png " alt=" ">
@@ -126,7 +116,7 @@
     </section>
 
     <footer class="mt-auto bg-dark text-light text-center">
-        <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
+        <p> IHC-Grupo 3 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
