--- a/form-militar.html
+++ b/form-militar.html
@@ -82,15 +82,16 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container mb-5">
-                <div class="col-12">
-                    <!-- cabecera -->
-                    <div class="row mt-4 border-bottom">
-                        <h3 class="font-weight-bold d-none d-sm-flex "> Registro de Militar </h3>
-                        <h4 class="font-weight-bold d-flex d-sm-none "> Registro de Militar </h4>
-                    </div>
-                    <!-- Formulario -->
-                    <form action="">
+            <form action="">
+                <div class="container mb-5">
+                    <div class="col-12">
+                        <!-- cabecera -->
+                        <div class="row mt-4 border-bottom">
+                            <h3 class="font-weight-bold d-none d-sm-flex "> Registro de Militar </h3>
+                            <h4 class="font-weight-bold d-flex d-sm-none "> Registro de Militar </h4>
+                        </div>
+                        <!-- Formulario -->
+
                         <!-- Fila 1 -->
                         <div class="row mt-5">
 
@@ -159,23 +160,24 @@
                                 </div>
                             </div>
                         </div>
-                    </form>
 
 
+
+                    </div>
                 </div>
-            </div>
-            <!-- botones -->
-            <div class="form-row mb-4 mt-5 text-center justify-content-center rounded">
-                <div class="form-group">
-                    <a href="#" class="btn btn-lg btn-primary">
-                        <i class="fas fa-edit"></i> Registrar</i>
-                    </a>
+                <!-- botones -->
+                <div class="form-row mb-4 mt-5 text-center justify-content-center rounded">
+                    <div class="form-group">
+                        <button href="#" class="btn btn-lg btn-primary">
+                            <i class="fas fa-edit"></i> Registrar</i>
+                        </button>
 
-                    <a href="profile-medico.html" class="btn btn-lg btn-secondary">
-                        <i class="fas fa-window-close"></i> Cancelar </a>
+                        <a href="profile-medico.html" class="btn btn-lg btn-secondary">
+                            <i class="fas fa-window-close"></i> Cancelar </a>
 
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
     <!-- /#page-content-wrapper -->
