--- a/asign-medico.html
+++ b/asign-medico.html
@@ -208,9 +208,9 @@
                 <!-- botones -->
                 <div class="form-row mb-4 text-center justify-content-center rounded">
                     <div class="form-group">
-                        <a href="#" class="btn btn-lg btn-primary">
+                        <button type="submit" class="btn btn-lg btn-primary">
                             <i class="fas fa-edit"></i> Asignar</i>
-                        </a>
+                        </button>
 
                         <a href="profile-medico.html" class="btn btn-lg btn-secondary">
                             <i class="fas fa-window-close"></i> Cancelar </a>
